# hello-weaviate-rs

./: Cargo.toml  README.md
src/: main.rs
src/pages/: home.rs  iss.rs  mod.rs  version.rs  weaviate.rs
