[package]
name = "hello-weaviate-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
dotenvy = "0.15.7"
maud = { version = "0.26.0", features = ["axum"] }
reqwest = "0.12.8"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
weaviate-community = "0.2.2"
